{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 157,
  "lineage": "0a38a117-b878-8a0b-bdc3-d6aadd7189f0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkInterfaces/my-network-interface",
            "internal_domain_name_suffix": "4k5bkxbglqbutebainu0lpk0db.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my-ip-configuration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/publicIPAddresses/my-public-ip",
                "subnet_id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-virtual-network/subnets/my-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AB-4F-93",
            "name": "my-network-interface",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "my-resource-group",
            "virtual_machine_id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Compute/virtualMachines/my-virtual-machine"
          },
          "dependencies": [
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.my_resource_group",
            "azurerm_subnet.my_subnet",
            "azurerm_virtual_network.my_virtual_network",
            "random_id.unique_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "my_nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkInterfaces/my-network-interface|/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-network-security-group",
            "network_interface_id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkInterfaces/my-network-interface",
            "network_security_group_id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-network-security-group"
          },
          "dependencies": [
            "azurerm_network_interface.my_network_interface",
            "azurerm_network_security_group.my_network_security_group",
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.my_resource_group",
            "azurerm_subnet.my_subnet",
            "azurerm_virtual_network.my_virtual_network",
            "random_id.unique_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-network-security-group",
            "location": "westeurope",
            "name": "my-network-security-group",
            "resource_group_name": "my-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-all-traffic",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-access",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "197.15.204.116",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.my_resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-network-security-group/securityRules/allow-all-traffic",
            "name": "allow-all-traffic",
            "network_security_group_name": "my-network-security-group",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "my-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.my_network_security_group",
            "azurerm_resource_group.my_resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-network-security-group/securityRules/ssh-access",
            "name": "ssh-access",
            "network_security_group_name": "my-network-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "my-resource-group",
            "source_address_prefix": "197.15.204.116",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.my_network_security_group",
            "azurerm_resource_group.my_resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "hibaproject85399028b42fa8ec",
            "fqdn": "hibaproject85399028b42fa8ec.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/publicIPAddresses/my-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.232.66.196",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "my-public-ip",
            "resource_group_name": "my-resource-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.my_resource_group",
            "random_id.unique_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-virtual-network/subnets/my-subnet",
            "name": "my-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-resource-group",
            "virtual_network_name": "my-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.my_resource_group",
            "azurerm_virtual_network.my_virtual_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5c15bef2-5c26-4903-9020-4369a5bd5a19",
            "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-virtual-network",
            "location": "westeurope",
            "name": "my-virtual-network",
            "resource_group_name": "my-resource-group",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/7d69a7da-d9e5-44b9-966b-cc38b4433610/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-virtual-network/subnets/my-subnet",
                "name": "my-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.my_resource_group"
          ]
        }
      ]
    }
  ]
}